# rtio

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md  go.mod  go.sum
cluster/: Facilities.xml  cleanall.sh  config.client  config.master  config.node1  config.node2  config.replica1  config.replica2  grid.sh  templates.xml
cluster/db/master/: .gitignore
cmd/rtio/: rtio.go
doc/: deploy.md  device-protocal.md  devicesdk.md  restapi.md  service-api.md
docs/: accessprotocol.md  device_access_protocol.md  device_sdkapis_golang.md  stress_report.md  user_access_protocol.md
examples/device/: device.go
examples/deviceservice/: deviceservice.go
examples/deviceverifier/: deviceverifier.go
examples/printer_simulation/printer/: printer.go
examples/printer_simulation/printer_beaglebone/: printer_beaglebone.go
examples/printer_simulation/user_grpc_control/: rpc_demo_for_direct_access.go
examples/resouce/resource_server/: resource_server.go
examples/simple_device/: simple_device.go
examples/user/user_access/: html_demo.html  rpc_demo_for_direct_access.go
internal/access/access_client/access_rpc_client/: access_rpc_client.go
internal/access/access_client/access_tcp_client/: access_tcp_client.go
internal/access/access_client/devicesession/: devicesession.go  restlike.go
internal/access/access_server/: access_server.go
internal/access/access_server/router/: router.go
internal/access/access_server/server_rpc/: server_rpc.go
internal/access/access_server/server_tcp/: sender.go  server_tcp.go  session.go  sessionmap.go
internal/deviceaccess/access_client/access_devicegen/: access_devicegen.go
internal/deviceaccess/access_client/access_rpc_client/: access_rpc_client.go
internal/deviceaccess/access_client/access_tcp_client/: access_tcp_client.go
internal/deviceaccess/access_client/access_tcp_stress/: access_tcp_stress.go
internal/deviceaccess/access_client/devicesession/: devicesession.go  restlike.go
internal/deviceaccess/access_server/: access_server.go
internal/deviceaccess/access_server/apprpc/: apprpc.go
internal/deviceaccess/access_server/backendconn/: backendconn.go
internal/deviceaccess/access_server/devicetcp/: devicetcp.go  (+3 more)
internal/status/status_client/: status_client.go
internal/status/status_server/: status_server.go  status_server_test.go
internal/useraccess/access_server/: access_server.go
internal/useraccess/useraccess_server/: useraccess_server.go
pkg/config/: config.go  config_test.go
pkg/deviceproto/: code.go  codec.go  codec_restlike.go  codec_test.go
pkg/log/: log.go  log_test.go
pkg/logsettings/: logsettings.go
pkg/rpcproto/deviceaccess/: deviceaccess.pb.go  deviceaccess.pb.gw.go  deviceaccess.proto  deviceaccess_grpc.pb.go
pkg/rpcproto/deviceservice/: deviceservice.pb.go  deviceservice.proto  deviceservice_grpc.pb.go
pkg/rpcproto/devicestatus/: devicestatus.pb.go  devicestatus.proto  devicestatus_grpc.pb.go
pkg/rpcproto/deviceverifier/: deviceverifier.pb.go  deviceverifier.proto  deviceverifier_grpc.pb.go
pkg/rpcproto/resource/: resource.pb.go  resource.proto  resource_grpc.pb.go
pkg/rtioutils/: rtioutils.go
pkg/timekv/: timekv.go  timekv_test.go
scripts/: copy-to-github.sh  gen.go  proto-to-go.sh  uri_to_crc.py
settings/: settings.cmake
source/Common/: CMakeLists.txt
source/Common/PublicHeaders/: Common.h  Json.h  MultiWorker.hpp  RedisClient.hpp  RemoteCode.h  RtioExcept.h  RtioLog.h  ServerGlobal.h
source/Common/Util/: IdGenerator.cpp  StringTools.cpp
source/Common/cpp/: Common.h  FunctionWorker.hpp  GxError.hpp  MultiWorker.hpp  RedisClient.hpp  RemoteCode.h  RtioExcept.h  VerijsLog.h  json.hpp
source/Deploy/: install_env.md  prepatch.sh
source/Deploy/config/: DMS.xml  Facilities.xml  access-server-tcp.config  access-server.config  api-manager.config  api-pusher.config  api-sender.config
source/Servers/APIManager/: CMakeLists.txt  HttpSession.cpp  HttpSession.h  IceClient.cpp  IceClient.h  Listener.h  Server.cpp
source/Servers/APINotifier/: APINotifierI.cpp  APINotifierI.h  Beast.h  CMakeLists.txt  HttpSession.cpp  HttpSession.h  NotifierHandler.hpp  Server.cpp
source/Servers/APIPusher/: CMakeLists.txt  HttpSession.cpp  HttpSession.h  IceClient.cpp  IceClient.h  Listener.h  Server.cpp
source/Servers/APISender/: Beast.h  CMakeLists.txt  HttpSession.cpp  HttpSession.h  IceClient.cpp  IceClient.h  Listener.cpp  Server.cpp
source/Servers/AccessServer/: CMakeLists.txt  HttpSession.cpp  HttpSession.h  IceClient.cpp  IceClient.h  Listener.cpp  MCodec.hpp  ResponseManager.hpp  Server.cpp  SessionManager.cpp  SessionManager.h  WebsocketSession.cpp  WebsocketSession.h
source/Servers/AccessServer/Clients/: ClientAsync.cpp  ClientSync.cpp
source/Servers/AccessServerTCP/: Boost.h  CMakeLists.txt  CodecAdapter.hpp  IceClient.cpp  IceClient.h  Listener.cpp  Listener.h  ResponseManager.hpp  Server.cpp  SessionManager.cpp  SessionManager.h  TCPSession.cpp  TCPSession.h  device_codec.c  device_codec.h
source/Servers/DeviceHub/: CMakeLists.txt  DeviceHubI.cpp  DeviceHubI.h  DispatchHandler.hpp  ReportHandler.hpp  Server.cpp
source/Servers/DeviceHub/Clients/: ClientAsyncA.cpp  ClientSyncA.cpp  ClientSyncB.cpp
source/Servers/DeviceManager/: CMakeLists.txt  DeviceManagerHandler.cpp  DeviceManagerHandler.h  DeviceManagerI.hpp  DeviceManagerRedis.hpp  Server.cpp
source/Servers/MessageReporter/: CMakeLists.txt  MessageReporterHandler.cpp  MessageReporterHandler.h  MessageReporterI.cpp  MessageReporterI.h  ReporterRedis.hpp  Server.cpp
source/Servers/MessageTrigger/: CMakeLists.txt  MessageTriggerI.cpp  MessageTriggerI.h  Server.cpp
source/Servers/MessageTrigger/Clients/: ClientSyncA.cpp  ClientSyncB.cpp
source/Servers/StatusServer/: CMakeLists.txt  DeviceRedis.hpp  Server.cpp  ServerGlobal.h  StatusServerHandler.cpp  StatusServerHandler.h  StatusServerI.cpp  StatusServerI.h
source/Servers/StatusServer/Clients/: ClientSync.cpp
source/Slice/: APINotifier.ice  CMakeLists.txt  DeviceHub.ice  DeviceManager.ice  MessageReporter.ice  MessageTrigger.ice  StatusServer.ice
(+9 files in other folders)
